test/langtools/tools/javac/localmethods/NoAbstractLocalMethodTest2.out
NoAbstractLocalMethodTest2.java:10:14: compiler.err.missing.meth.body.or.decl.abstract
1 error
